// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CNavbarText customize 1`] = `
<div>
  <span
    class="navbar-text bazinga"
  >
    Test
  </span>
</div>
`;

exports[`loads and displays CNavbarText component 1`] = `
<div>
  <span
    class="navbar-text"
  >
    Test
  </span>
</div>
`;
